// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobsBulkLists component tests snapshot testing multi-cancel with canceled and skipped jobs  1`] = `
<div
  data-ouia-component-type="bulk-list"
  data-ouia-safe={true}
>
  <TextContent>
    <Text
      component="h2"
    >
      Cancel job
    </Text>
    <TextList>
      <TextListItem
        key="eff4ee-11qw23-6675-pokau97-qwedjut45a0fa_0"
      >
        <strong>
          <ItemDescriptor
            itemDescription={
              Object {
                "description": "TT111",
                "id": "eff4ee-11qw23-6675-pokau97-qwedjut45a0fa_0",
                "name": "travels",
              }
            }
          />
        </strong>
         
      </TextListItem>
    </TextList>
  </TextContent>
  <TextContent
    className="pf-u-mt-sm"
  >
    <Text
      component="small"
    >
      Note: The job status has been updated. The list may appear inconsistent until you refresh any applied filters.
    </Text>
  </TextContent>
  <Divider
    className="pf-u-my-xl"
    component="div"
  />
  <TextContent>
    <Text
      component="h2"
    >
      <span>
        Ignored jobs:
      </span>
    </Text>
    <Text
      className="pf-u-mt-sm"
      component="small"
    >
      <span>
        These jobs were ignored because they were executed or canceled
      </span>
    </Text>
    <TextList>
      <TextListItem
        key="2234dde-npce1-2908-b3131-6123c675a0fa_0"
      >
        <strong>
          <ItemDescriptor
            itemDescription={
              Object {
                "description": "T@123",
                "id": "2234dde-npce1-2908-b3131-6123c675a0fa_0",
                "name": "travels1",
              }
            }
          />
        </strong>
         
      </TextListItem>
    </TextList>
  </TextContent>
</div>
`;

exports[`JobsBulkLists component tests snapshot testing multi-cancel with no canceled jobs and only skipped jobs 1`] = `
<div
  data-ouia-component-type="bulk-list"
  data-ouia-safe={true}
>
  <TextContent>
    <Text
      component="h2"
    >
      No jobs were canceled
    </Text>
  </TextContent>
  <Divider
    className="pf-u-my-xl"
    component="div"
  />
  <TextContent>
    <Text
      component="h2"
    >
      <span>
        Ignored jobs:
      </span>
    </Text>
    <Text
      className="pf-u-mt-sm"
      component="small"
    >
      <span>
        These jobs were ignored because they were executed or canceled
      </span>
    </Text>
    <TextList>
      <TextListItem
        key="2234dde-npce1-2908-b3131-6123c675a0fa_0"
      >
        <strong>
          <ItemDescriptor
            itemDescription={
              Object {
                "description": "TT111",
                "id": "2234dde-npce1-2908-b3131-6123c675a0fa_0",
                "name": "travels1",
              }
            }
          />
        </strong>
         
      </TextListItem>
    </TextList>
  </TextContent>
</div>
`;

exports[`JobsBulkLists component tests snapshot testing multi-cancel with no skipped jobs 1`] = `
<div
  data-ouia-component-type="bulk-list"
  data-ouia-safe={true}
>
  <TextContent>
    <Text
      component="h2"
    >
      Cancel job
    </Text>
    <TextList>
      <TextListItem
        key="eff4ee-11qw23-6675-pokau97-qwedjut45a0fa_0"
      >
        <strong>
          <ItemDescriptor
            itemDescription={
              Object {
                "description": "TT111",
                "id": "eff4ee-11qw23-6675-pokau97-qwedjut45a0fa_0",
                "name": "travels",
              }
            }
          />
        </strong>
         
      </TextListItem>
    </TextList>
  </TextContent>
  <Divider
    className="pf-u-my-xl"
    component="div"
  />
  <TextContent>
    <Text
      component="h2"
    >
      Errors:
    </Text>
    <TextList>
      <TextListItem
        key="T3113e-vbg43-2234-lo89-cpmw3214ra0fa_0"
      >
        <strong>
          <ItemDescriptor
            itemDescription={
              Object {
                "description": "T4433",
                "errorMessage": "404 error",
                "id": "T3113e-vbg43-2234-lo89-cpmw3214ra0fa_0",
                "name": "travels1",
              }
            }
          />
        </strong>
         
        <span>
           - 
          404 error
        </span>
      </TextListItem>
    </TextList>
  </TextContent>
</div>
`;
